# smart_plug_1.2

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/ade9153a/: CMakeLists.txt  ade9153a_api.c  ade9153a_driver.c
components/ade9153a/include/: ade9153a.h  ade9153a_api.h
components/hardware/: CMakeLists.txt  button.c  led.c  relay.c  zero_crossing.c
components/hardware/include/: button.h  led.h  relay.h  zero_crossing.h
components/mqtt_manager/: CMakeLists.txt  aws_certs.c  mqtt_manager.c
components/mqtt_manager/include/: aws_certs.h  mqtt_manager.h
components/wifi_manager/: CMakeLists.txt  captive_portal.c  index.html  wifi_manager.c
components/wifi_manager/include/: captive_portal.h  wifi_manager.h
main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  smart_plug.c
scripts/: html_to_c.py  pem_to_c.py
